# Linux-commands

./: .gitignore  CMakeLists.txt  README.md  main.c  unittest
src/: cat.c  cat.h  grep.c  grep.h  ls.c  ls.h  main.c  regex.c  regex.h  sort.c  sort.h  wc.c  wc.h
unit-test-output/: CMakeCache.txt  Makefile  cmake_install.cmake  sort
unit-test-output/testdir/: file1.in  file1.out  file2.in  file2.out  file3.out  file4.out  file5.out
